--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ shlex = "0.1.1"
 tty = { git = "https://github.com/xobs/tty-rs.git", rev = "42599fb207c2c1a81b45a1e9985a16fc33596151" }
 chan-signal = "0.2.0"
 libc = "0.2.21"
+nix = "0.8.0"
