--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tty = { git = "https://github.com/xobs/tty-rs.git", rev = "42599fb207c2c1a81b45a
 chan-signal = "0.2.0"
 libc = "0.2.21"
 nix = "0.8.0"
+termios = "0.2.*"
