windows: initial Windows support
This adds basic, initial support for Windows.

The tests don't yet run, but that will be fixed up soon.

Windows support does not currently gracefully terminate programs.
Instead, it does the Windows-equivalent of sending a SIGKILL to
the main process.  This will be fixed up later on, if necessary.

Signed-off-by: Sean Cross <sean@xobs.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ repository = "https://github.com/xobs/runny"
 [dependencies]
 shlex = "0.1.1"
 fd = "0.2.2"
+nix = "0.8.0"
+kernel32-sys = "0.2.2"
 
 [target.'cfg(unix)'.dependencies]
 tty = { git = "https://github.com/xobs/tty-rs.git", rev = "42599fb207c2c1a81b45a1e9985a16fc33596151" }
-nix = "0.8.0"
 termios = "0.2.2"
+
+[target.'cfg(windows)'.dependencies]
