--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ shlex = "0.1.1"
 fd = "0.2.2"
 nix = "0.8.0"
 kernel32-sys = "0.2.2"
+user32-sys = "0.2.0"
+winapi = "0.2.2"
 
 [target.'cfg(unix)'.dependencies]
 tty = { git = "https://github.com/xobs/tty-rs.git", rev = "42599fb207c2c1a81b45a1e9985a16fc33596151" }
